fix badges alignment & position

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,3 +51,14 @@ main h4 a:target {
 	from { color: #990000; font-weight: bold; }
 	to { color: #159957; font-weight: normal; }
 }
+
+.badges-container {
+	text-align: center;
+	width: 100%;
+	height: 300px;
+    line-height: 300px;
+}
+
+.badges-container img {
+	vertical-align: middle;
+}
